--- a/tools/api-football.config.json
+++ b/tools/api-football.config.json
@@ -1,28 +1,29 @@
 {
   "timezone": "America/Sao_Paulo",
   "days_ahead": 7,
-  "last_n": 5,
+  "form_window": 5,
+  "goals_window": 5,
   "leagues": [
-    { "search": "Baiano - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Cearense - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Pernambucano - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Paulista - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Carioca - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Mineiro - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Gaúcho - 1", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
+    { "search": "Baiano", "country": "Brazil", "type": "league" },
+    { "search": "Cearense", "country": "Brazil", "type": "league" },
+    { "search": "Pernambucano", "country": "Brazil", "type": "league" },
+    { "search": "Paulista", "country": "Brazil", "type": "league" },
+    { "search": "Carioca", "country": "Brazil", "type": "league" },
+    { "search": "Mineiro", "country": "Brazil", "type": "league" },
+    { "search": "Gaucho", "country": "Brazil", "type": "league" },
 
-    { "search": "Serie A", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Serie B", "country": "Brazil", "type": "league", "season_rule": "calendar_year" },
-    { "search": "Copa do Brasil", "country": "Brazil", "type": "cup", "season_rule": "calendar_year" },
+    { "search": "Serie A", "country": "Brazil", "type": "league" },
+    { "search": "Serie B", "country": "Brazil", "type": "league" },
+    { "search": "Copa do Brasil", "country": "Brazil", "type": "cup" },
 
-    { "search": "Premier League", "country": "England", "type": "league", "season_rule": "europe_split" },
-    { "search": "La Liga", "country": "Spain", "type": "league", "season_rule": "europe_split" },
-    { "search": "Serie A", "country": "Italy", "type": "league", "season_rule": "europe_split" },
-    { "search": "Bundesliga", "country": "Germany", "type": "league", "season_rule": "europe_split" },
-    { "search": "Ligue 1", "country": "France", "type": "league", "season_rule": "europe_split" },
+    { "search": "Premier League", "country": "England", "type": "league" },
+    { "search": "La Liga", "country": "Spain", "type": "league" },
+    { "search": "Serie A", "country": "Italy", "type": "league" },
+    { "search": "Bundesliga", "country": "Germany", "type": "league" },
+    { "search": "Ligue 1", "country": "France", "type": "league" },
 
-    { "search": "UEFA Champions League", "country": "", "type": "cup", "season_rule": "europe_split" },
-    { "search": "UEFA Europa League", "country": "", "type": "cup", "season_rule": "europe_split" },
-    { "search": "UEFA Europa Conference League", "country": "", "type": "cup", "season_rule": "europe_split" }
+    { "search": "UEFA Champions League", "country": "", "type": "cup" },
+    { "search": "UEFA Europa League", "country": "", "type": "cup" },
+    { "search": "UEFA Europa Conference League", "country": "", "type": "cup" }
   ]
 }
