chore: hash app.js and update HTML

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "node tools/build-static.mjs"
+    "build": "node tools/build-static.mjs",
+    "hash:js": "node tools/hash-js.mjs"
   }
 }
