--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "radartips",
   "private": true,
   "type": "module",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "node tools/build-static.mjs",
     "hash:js": "node tools/hash-js.mjs"
